# Interactive-C

./: .gitignore  AUTHORS  ChangeLog  HACKING  INSTALL  MAINTAINERS  Makefile  Makefile.am  Makefile.in  N_client  README.md  THANKS  TODO.md  config.h  config.h.in  config.status  configure  configure.ac  gtk-crear-sesion.c  server  server.c
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
fuentes/: N_client.c  cliente.c  generador-pot.sh  generate-binaries.sh  msginit-command.sh  msgmerge-command.sh  server.c  servidor.c
fuentes/idioma/en/LC_MESSAGES/: fuentes.mo  server.mo
fuentes/idioma/es/LC_MESSAGES/: server.mo
fuentes/po/: en.po  es.po  fuentes.pot  server.pot
interfaces/: Makefile  Principal.ui  builder-crear-sesion.ui  builder-unir-sesion.ui  builder.ui  gtk-crear-sesion  gtk-crear-sesion.c  gtk-principal.c  gtk-unir-sesion  gtk-unir-sesion.c  msginit-command.sh  plantilla.pot
interfaces/idioma/es/LC_MESSAGES/: gtk-interfaces.mo
interfaces/po/: es.po  gtk-interfaces.pot
src/controlador/: N_client.c  cliente  cliente.c  generador-pot.sh  server  server.c
src/controlador/idioma/es/LC_MESSAGES/: fuentes.mo
src/controlador/po/: en.po  es.po
src/interfaces/: Principal.ui  builder-principal.ui  builder-unir-sesion.ui  generate-binaries.sh  gettext-xml.sh  gtk-crear-sesion  gtk-interfaces  gtk-principal  gtk-principal.c  gtk-unir-sesion  gtk-unir-sesion.c
src/interfaces/idioma/en/LC_MESSAGES/: gtk-interfaces.mo
src/interfaces/idioma/en/LC_MESSAGES/en/: builder-unir-sesion.ui
src/interfaces/po/: en.po
